Tidy things up